2002-09-18 behlendorf
  * Fixed segfault related to quit command, client connections are
    now properly cleaned up on the daemon side.

2002-09-18 behlendorf
  * Fixed coalescing of actions to the devices.

2002-09-17 behlendorf
  * Reworked the powerman client/server protocol (highlights follow)
  * Removed send/expect parsing, replaced with a simple switch.
  * Host lists have replaced regexs in the protocol.
  * Powerman authentication step removed.
  * Check login command removed.

2002-09-17 garlick
	* Reformatting, cleanup, doc of data structures
	* Made device list static in device.c
	* Use static array allocation for scripts[]

2002-09-17 garlick
	* Fix bug introduced in cleanup where actions were initiated but
	  not completed.  Select loop should only set status to STAT_OCCUPIED
	  if action was one requiring completion.
	* Tagged powerman-1-0-3.

2002-09-16 garlick
	* Got rid of remnants of second "completion" expect script 
	* Got rid of cheat->g global structure.
	* Reduced interdependencies between modules.
	* Tagged powerman-1-0-2.

2002-09-14 garlick
	* Renamed functions to use lower case module prefix.
	* Renamed client.[ch] -> server.[ch].
	* Renamed pm_string.[ch] -> string.[ch]
	* Renamed exit_error.[ch] -> error.[ch]
	* Indented inline comments.
	* Made some globals local to powermand.c

2002-09-13 garlick
	* Ran indent -kr *.[ch] on everything in src except hostlist.[ch]
	  and list.[ch] 
	* Tagged src with after-indent.
	* Got rid of NDUMP code (deprecated debugging stuff).
	* Added "vi:softtabstop=4" to *.c

2002-09-12 garlick
	* Brian documented some problems in the top of TODO.
	* Chris cleaned up some type casting.
	* Chris fixed icebox.dev to add delay after cmds to prevent 
	  icebox "ERROR 5" (resource is busy).  This was causing "bulk" 
  	  commands to fail on MCR
	* Tagged powerman-1-0-1.

2002-09-06 dun
	* Fixed bug where downed network device would cause select to spin.

2002-08-16 auselton